--- a/index.html
+++ b/index.html
@@ -170,8 +170,18 @@
             transform: translateY(-50%);
             width: 24px;
             height: 24px;
-            color: var(--color-text-secondary);
-            pointer-events: none;
+            color: var(--color-primary);
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .search-icon:hover {
+            color: var(--color-primary-hover);
+            transform: translateY(-50%) scale(1.1);
+        }
+
+        .search-icon:active {
+            transform: translateY(-50%) scale(0.95);
         }
 
         /* Stats Cards */
@@ -331,9 +341,13 @@
             color: var(--color-text);
             font-size: 16px;
             margin-bottom: 6px;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            line-height: 1.4;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
             overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
         }
 
         .card-subtitle {
@@ -542,9 +556,9 @@
                     type="text" 
                     id="searchInput" 
                     class="search-input"
-                    placeholder="Buscar arquivos ou pastas..." 
+                    placeholder="Buscar arquivos ou pastas... (pressione Enter ou clique na lupa)" 
                 >
-                <svg class="search-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="search-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" onclick="performSearch()">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                 </svg>
             </div>
@@ -774,8 +788,8 @@
         }
 
         // Search functionality
-        document.getElementById('searchInput').addEventListener('input', (e) => {
-            const searchTerm = e.target.value.toLowerCase().trim();
+        function performSearch() {
+            const searchTerm = document.getElementById('searchInput').value.toLowerCase().trim();
             
             if (!searchTerm) {
                 searchMode = false;
@@ -837,6 +851,13 @@
                     </div>
                 `;
             }).join('');
+        }
+
+        // Enter key to search
+        document.getElementById('searchInput').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                performSearch();
+            }
         });
 
         // Navigate to file location
