--- a/index.html
+++ b/index.html
@@ -249,10 +249,46 @@
             font-size: 14px;
             display: flex;
             align-items: center;
+            justify-content: space-between;
             flex-wrap: wrap;
-            gap: 8px;
+            gap: 12px;
             box-shadow: var(--shadow-sm);
             animation: fadeIn 0.6s ease-out 0.2s both;
+        }
+
+        .breadcrumb-content {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 8px;
+            flex: 1;
+        }
+
+        .btn-home {
+            padding: 8px 16px;
+            background: var(--color-primary);
+            color: var(--color-white);
+            border: none;
+            border-radius: var(--radius-base);
+            font-size: 13px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            box-shadow: 0 2px 8px rgba(var(--color-teal-500-rgb), 0.3);
+            white-space: nowrap;
+        }
+
+        .btn-home:hover {
+            background: var(--color-primary-hover);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(var(--color-teal-500-rgb), 0.4);
+        }
+
+        .btn-home:active {
+            transform: translateY(0);
         }
 
         .breadcrumb-item {
@@ -571,7 +607,7 @@
         <div id="breadcrumb" class="breadcrumb"></div>
 
         <!-- Content Grid -->
-        <div id="content" class="content-grid"></div>
+        <div id="content" class="content-grid" style="scroll-margin-top: 20px;"></div>
 
         <!-- Empty State -->
         <div id="emptyState" class="empty-state" style="display: none;">
@@ -679,7 +715,7 @@
             const breadcrumb = document.getElementById('breadcrumb');
             const items = ['Início', ...currentPath];
             
-            breadcrumb.innerHTML = items.map((item, index) => {
+            const breadcrumbItems = items.map((item, index) => {
                 const isLast = index === items.length - 1;
                 return `
                     <span class="breadcrumb-item ${isLast ? 'active' : ''}" 
@@ -689,6 +725,20 @@
                     ${!isLast ? '<span class="breadcrumb-separator">›</span>' : ''}
                 `;
             }).join('');
+
+            breadcrumb.innerHTML = `
+                <div class="breadcrumb-content">
+                    ${breadcrumbItems}
+                </div>
+                ${searchMode ? `
+                    <button class="btn-home" onclick="goHome()">
+                        <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
+                        </svg>
+                        Voltar ao Início
+                    </button>
+                ` : ''}
+            `;
         }
 
         // Render content
@@ -805,9 +855,17 @@
 
             const content = document.getElementById('content');
             document.getElementById('breadcrumb').innerHTML = `
-                <span class="breadcrumb-item active">Resultados da busca: "${searchTerm}"</span>
-                <span class="breadcrumb-separator">›</span>
-                <span class="breadcrumb-item">${results.length} resultado${results.length !== 1 ? 's' : ''}</span>
+                <div class="breadcrumb-content">
+                    <span class="breadcrumb-item active">Resultados da busca: "${searchTerm}"</span>
+                    <span class="breadcrumb-separator">›</span>
+                    <span class="breadcrumb-item">${results.length} resultado${results.length !== 1 ? 's' : ''}</span>
+                </div>
+                <button class="btn-home" onclick="goHome()">
+                    <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
+                    </svg>
+                    Voltar ao Início
+                </button>
             `;
 
             if (results.length === 0) {
@@ -868,8 +926,28 @@
             const cleanPath = filePath[0] === 'REVIT SITE' ? filePath.slice(1) : filePath;
             currentPath = cleanPath.slice(0, -1);
             render();
-            // Scroll suave para o topo
-            window.scrollTo({ top: 0, behavior: 'smooth' });
+            // Scroll suave para a área de conteúdo
+            setTimeout(() => {
+                document.getElementById('content').scrollIntoView({ 
+                    behavior: 'smooth', 
+                    block: 'start'
+                });
+            }, 100);
+        }
+
+        // Go back to home
+        function goHome() {
+            document.getElementById('searchInput').value = '';
+            searchMode = false;
+            currentPath = [];
+            render();
+            // Scroll suave para a área de conteúdo
+            setTimeout(() => {
+                document.getElementById('content').scrollIntoView({ 
+                    behavior: 'smooth', 
+                    block: 'start'
+                });
+            }, 100);
         }
 
         // Initialize app
